2002-11-07  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* format.scm (format): Use 'monitor' properly.  Not the definition
	needs to be restricted, the actual function needs to be.

2002-11-05  Neil Jerram  <neil@ossau.uklinux.net>

	* boot-9.scm (define-option-interface): Fix to "simplification"
	change below.

	* debugger/breakpoints/source.scm: Enable source property
	recording when module is loaded.
	(##): Cope with ports whose `filename' is not a string.

2002-11-04  Neil Jerram  <neil@ossau.uklinux.net>

	* boot-9.scm (define-option-interface): Simplify code-generation
	code.

	* debugger/command-loop.scm (read-and-dispatch-command): Import
	set-readline-prompt dynamically if we need to.  (Previous
	arrangement didn't work if this module was loaded before (ice-9
	readline).)

2002-11-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* format.scm (format): Wrap a monitor around format:format since
	it is not thread-safe.

2002-10-27  Marius Vollmer  <mvo@zagadka.ping.de>

	* threads.scm (%thread-handler): Explicitely return '#f'.  This
	value will be returned by join-thread.

2002-10-26  Neil Jerram  <neil@ossau.uklinux.net>

	Merging debugger enhancements previously in separate
	`guile-debugger' package ...
	
	* debugger.scm: Factored out into the following constituent parts
	- see comment in file for more details.
	(*not-yet-introduced*): New (avoids repeatedly introducing the
	debugger when entering it from breakpoints).
	(debug-stack): New.
	(debug): Rewrite to use more general `debug-stack'.

	* debugger/commands.scm, debugger/command-loop.scm,
	debugger/state.scm, debugger/utils.scm: New files containing bits
	of old (ice-9 debugger), plus some rewriting and enhancements for
	breakpoint support ...

	* debugger/state.scm (state-rtd): Add flags field.
	(make-state): Extend to optionally take flags.
	(state-flags): New, accessor for flags field.
	(set-state-index!, set-stack-index!): New.
	(write-state-short): Rewritten to print out the current source